<resources>

    <string name="app_name">Boggle</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_new_game">Новая игра</string>
    <string name="select_level">Выбрать уровень</string>
    <string name="about_application">О приложении</string>
    <string name="Exit">Выход</string>
    <string name="you">Вы</string>
    <string name="Android">Android</string>
    <string name="searchW">Искать</string>
    <string name="cancelW">Очистить</string>
    <string name="points">...</string>
    <string name="word">Слово:</string>
    <string name="text">Неверно выбрана буква!</string>
    <string name="time">Время:</string>
    <string name="android_think">Android думает...</string>
    <string name="you_word">Ваши слова...</string>
    <string name="result_titel">Результат игры:</string>
    <string name="game_points">Очки</string>
    <string name="youWinner">Вы победили!</string>
    <string name="androidWinner">Android победил!</string>
    <string name="standoff">Ничья!</string>
    <string name="ruls">Правила</string>
    <string name="game_ruls"> Из выпавших букв нужно сложить слова. \n
        Чем длиннее слово, тем больше очков вы заработаете за него</string>
    <string name="about_points">Очки\n
        2 буквы        ---->       1 очко \n
        3 буквы        ---->       2 очка \n
        4 буквы        ---->       4 очка \n
        >5 букв        ---->       6 очков \n
        >8 букв        ---->       10 очков.</string>
    <string name="coperight">Yakimchik Sergei ©</string>

</resources>