<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/game" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/you"
        android:textColor="@color/DarkGoldenrod"
        android:textSize="22dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/word"
            android:textColor="@color/DarkGoldenrod"
            android:textSize="15dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/wordTextView"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textColor="@color/DarkGoldenrod"
            android:textSize="15dp" />

        <Button
            android:id="@+id/okButton"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/searchW"
            android:textSize="16dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelW"
            android:textSize="16dp"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/Android"
        android:textColor="@color/DarkGoldenrod"
        android:textSize="22dp" />

    <GridView
        android:id="@+id/GridView"
        android:layout_width="260dp"
        android:layout_height="254dp"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:numColumns="4"
        android:verticalSpacing="0px" 
        android:layout_marginBottom="12dp"
        android:scrollbars="none">
    </GridView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" 
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginRight="5dp"/>
        
        <ProgressBar
	        android:id="@+id/progressBar1"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:max="100"/>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/androidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/textView2"
        android:layout_marginRight="10dp"
        android:layout_marginTop="45dp"
        android:text="@string/android_think"
        android:textColor="@color/DarkGoldenrod"
        android:textSize="16dp" />
    
    <TextView
        android:id="@+id/youTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="45dp"
        android:textColor="@color/DarkGoldenrod"
        android:textSize="16dp" 
        android:text="@string/you_word"/>

</RelativeLayout>