<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/main_background">
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_vertical"
    	android:orientation="vertical">
        
        <Button
	        android:id="@+id/NewGameButton"
	        style="@style/myButton"
	        android:layout_width="172dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="15dp"
	        android:text="@string/start_new_game"
	        android:textSize="25dp" />
	    
	    <Button
	        android:id="@+id/SelectLevelButton"
	        style="@style/myButton"
	        android:layout_width="249dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:text="@string/select_level"
	        android:textSize="25dp" />
	    
	    <Button
	        android:id="@+id/AboutAppButton"
	        style="@style/myButton"
	        android:layout_width="215dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:text="@string/about_application"
	        android:textSize="25dp" />
	    
	    <Button
	        android:id="@+id/ExitButton"
	        style="@style/myButton"
	        android:layout_width="142dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:text="@string/Exit"
	        android:textSize="25dp" 
	        android:layout_marginBottom="15dp"/>
        
    </LinearLayout>
    

</LinearLayout>
